Bug 126051 - opening .deb archive fails with "application not in path error message"
Summary: opening .deb archive fails with "application not in path error message"
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Harald Hvaal
URL:
Keywords:
: 127585 (view as bug list)
Depends on:
Blocks:
 
Reported: 2006-04-22 00:34 UTC by Carsten Lohrke
Modified: 2006-05-18 17:37 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
File with which the issue reproduces (18.31 KB, application/x-debian-package)
2006-04-29 00:52 UTC, Philippe Cloutier
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Carsten Lohrke 2006-04-22 00:34:25 UTC
Version:            (using KDE KDE 3.5.2)
Installed from:    Gentoo Packages

For once, the message doesn't tell, which application it needs and also ar is in path and manually invoking it works fine. The reason I can think of Ark has a problem is, that on a Gentoo box the toolchain stuff is symlinked, so it's exchangable on the fly.


ls -l /usr/bin/ar
lrwxrwxrwx 1 root root 20 23. Nov 14:45 /usr/bin/ar -> i686-pc-linux-gnu-a
Comment 1 Haris Kouzinopoulos 2006-04-22 03:10:20 UTC
Hi, thanks for your bug report. I don't have a .deb file available, is it possible to attach one? You are right about the message but unfortunately this can't be changed before kde4
Comment 2 Philippe Cloutier 2006-04-29 00:52:55 UTC
Created attachment 15833 [details]
File with which the issue reproduces
Comment 3 Philippe Cloutier 2006-04-29 01:03:30 UTC
Note that you'll want to check Debian #362871 for a more accurate description.
Also, I don't understand the comment from Haris about not being able to mention which application is missing, as the error with, for example, a zip file does mention which utility is missing. Is there something specific to .deb?
Comment 4 Haris Kouzinopoulos 2006-04-29 01:50:07 UTC
Hi, i was just saying that the message needs changing but since we are on a string freeze, we only can change messages in kde4. Thanks for the attachment
Comment 5 Haris Kouzinopoulos 2006-04-29 02:19:04 UTC
SVN commit 535252 by charis:

Check for unarchiver program too. verifyCompressUtilityIsAvailable needs a second \
argument to indicate if compression utility can do uncompressing as well Also fixed \
some indentations while i was there :)

BUG: 126051



 M  +3 -2      ar.cpp  
 M  +2 -2      arch.cpp  
 M  +2 -2      arch.h  
 M  +2 -2      compressedfile.cpp  
 M  +1 -1      lha.cpp  
 M  +2 -2      tar.cpp  
 M  +2 -2      zip.cpp  
 M  +1 -1      zoo.cpp  


--- branches/KDE/3.5/kdeutils/ark/ar.cpp #535251:535252
@@ -48,8 +48,9 @@
 ArArch::ArArch( ArkWidget *_gui, const QString & _fileName )
   : Arch(_gui, _fileName )
 {
-  m_archiver_program = "ar";
-  verifyCompressUtilityIsAvailable(m_archiver_program);
+  m_archiver_program = m_unarchiver_program = "ar";
+  verifyCompressUtilityIsAvailable( m_archiver_program );
+  verifyUncompressUtilityIsAvailable( m_unarchiver_program );
 
   // Do not set headerString - there is none for Ar
   m_numCols = 5;
--- branches/KDE/3.5/kdeutils/ark/arch.cpp #535251:535252
@@ -83,7 +83,7 @@
 }
 
 //Check if a compress utility exists
-void Arch::verifyCompressUtilityIsAvailable(const QString &utility)
+void Arch::verifyCompressUtilityIsAvailable( const QString &utility )
 {
   // see if the utility is in the PATH of the user.
   QString cmd = KGlobal::dirs()->findExe( utility );
@@ -91,7 +91,7 @@
 }
 
 //Check if a utility can uncompress files
-void Arch::verifyUncompressUtilityIsAvailable(const QString &utility)
+void Arch::verifyUncompressUtilityIsAvailable( const QString &utility )
 {
   // see if the utility is in the PATH of the user.
   QString cmd = KGlobal::dirs()->findExe( utility );
--- branches/KDE/3.5/kdeutils/ark/arch.h #535251:535252
@@ -130,9 +130,9 @@
     void verifyUtilityIsAvailable( const QString &,
                                    const QString & = QString::null );
 
-    void verifyCompressUtilityIsAvailable(const QString &utility);
+    void verifyCompressUtilityIsAvailable( const QString &utility );
 
-    void verifyUncompressUtilityIsAvailable(const QString &utility);
+    void verifyUncompressUtilityIsAvailable( const QString &utility );
 
     bool archUtilityIsAvailable() { return m_bArchUtilityIsAvailable; }
 
--- branches/KDE/3.5/kdeutils/ark/compressedfile.cpp #535251:535252
@@ -64,8 +64,8 @@
   m_tempDirectory->setAutoDelete( true );
   m_tmpdir = m_tempDirectory->name();
   initData();
-  verifyCompressUtilityIsAvailable(m_archiver_program);
-  verifyUncompressUtilityIsAvailable(m_unarchiver_program);
+  verifyCompressUtilityIsAvailable( m_archiver_program );
+  verifyUncompressUtilityIsAvailable( m_unarchiver_program );
 
   if (!QFile::exists(_fileName))
   {
--- branches/KDE/3.5/kdeutils/ark/lha.cpp #535251:535252
@@ -56,7 +56,7 @@
   : Arch( _gui, _fileName )
 {
   m_archiver_program = "lha";
-  verifyCompressUtilityIsAvailable( m_archiver_program);
+  verifyCompressUtilityIsAvailable( m_archiver_program );
 
   m_headerString = "----";
 }
--- branches/KDE/3.5/kdeutils/ark/tar.cpp #535251:535252
@@ -82,8 +82,8 @@
 {
     m_filesToAdd = m_filesToRemove = QStringList();
     m_archiver_program = m_unarchiver_program = ArkSettings::tarExe();
-    verifyCompressUtilityIsAvailable(m_archiver_program);
-    verifyUncompressUtilityIsAvailable(m_unarchiver_program);
+    verifyCompressUtilityIsAvailable( m_archiver_program );
+    verifyUncompressUtilityIsAvailable( m_unarchiver_program );
 
     m_fileMimeType = _openAsMimeType;
     if ( m_fileMimeType.isNull() )
--- branches/KDE/3.5/kdeutils/ark/zip.cpp #535251:535252
@@ -46,8 +46,8 @@
 {
   m_archiver_program = "zip";
   m_unarchiver_program = "unzip";
-  verifyCompressUtilityIsAvailable( m_archiver_program);
-  verifyUncompressUtilityIsAvailable( m_unarchiver_program);
+  verifyCompressUtilityIsAvailable( m_archiver_program );
+  verifyUncompressUtilityIsAvailable( m_unarchiver_program );
 
   m_headerString = "----";
   m_repairYear = 9; m_fixMonth = 7; m_fixDay = 8; m_fixTime = 10;
--- branches/KDE/3.5/kdeutils/ark/zoo.cpp #535251:535252
@@ -55,7 +55,7 @@
   : Arch( gui, fileName )
 {
   m_archiver_program = "zoo";
-  verifyCompressUtilityIsAvailable( m_archiver_program);
+  verifyCompressUtilityIsAvailable( m_archiver_program );
 
   m_headerString = "----";
 }
Comment 6 Haris Kouzinopoulos 2006-05-18 17:37:42 UTC
*** Bug 127585 has been marked as a duplicate of this bug. ***