Check for unarchiver program too. verifyCompressUtilityIsAvailable needs a second argument to indicate if compression utility can do uncompressing as well Also fixed some indentations while i was there :)

BUG: 126051


svn path=/branches/KDE/3.5/kdeutils/ark/; revision=535252