tar.cpp
@@ -82,8 +82,8 @@ TarArch::TarArch( ArkWidget *_gui,
 {
     m_filesToAdd = m_filesToRemove = QStringList();
     m_archiver_program = m_unarchiver_program = ArkSettings::tarExe();
-    verifyCompressUtilityIsAvailable(m_archiver_program);
-    verifyUncompressUtilityIsAvailable(m_unarchiver_program);
+    verifyCompressUtilityIsAvailable( m_archiver_program );
+    verifyUncompressUtilityIsAvailable( m_unarchiver_program );
 
     m_fileMimeType = _openAsMimeType;
     if ( m_fileMimeType.isNull() )
